k8s/helloworld-gui-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: helloworld-gui
spec:
  selector:
    app: helloworld-gui
  ports:
    - port: 80
      targetPort: 80
