k8s/helloworld-svc-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: helloworld-svc
spec:
  selector:
    app: helloworld-svc
  ports:
    - port: 80
      targetPort: 8000
