k8s/helloworld-gui-route.yaml

---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: helloworld-gui-route
spec:
  parentRefs:
    - name: traefik-gateway
      namespace: default
  hostnames:
    - helloworld-gui-dev.192.168.33.100.nip.io
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: helloworld-gui
          port: 80
          weight: 1
